--- a/Fantome.LeagueFileManager/Fantome.LeagueFileManager.csproj
+++ b/Fantome.LeagueFileManager/Fantome.LeagueFileManager.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ReleaseManifest\ReleaseManifest.cs" />
     <Compile Include="ReleaseManifest\ReleaseManifestFileEntry.cs" />
     <Compile Include="ReleaseManifest\ReleaseManifestFolderEntry.cs" />
+    <Compile Include="RiotArchiveFile\RiotArchiveFile.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
