--- a/Fantome.LeagueFileManager/Fantome.LeagueFileManager.csproj
+++ b/Fantome.LeagueFileManager/Fantome.LeagueFileManager.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Manager\LeagueDeployRules.cs" />
     <Compile Include="Manager\LeagueInstallation.cs" />
     <Compile Include="Manager\LeagueProject.cs" />
     <Compile Include="Manager\LeagueProjectRelease.cs" />
