--- a/Fantome.Libraries.LeagueFileManager/Fantome.Libraries.LeagueFileManager.csproj
+++ b/Fantome.Libraries.LeagueFileManager/Fantome.Libraries.LeagueFileManager.csproj
@@ -42,11 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LeagueDeployRules.cs" />
+    <Compile Include="LeagueRADSDeployRules.cs" />
     <Compile Include="LeagueInstallation.cs" />
-    <Compile Include="LeagueProject.cs" />
-    <Compile Include="LeagueProjectRelease.cs" />
+    <Compile Include="LeagueRADSInstallation.cs" />
+    <Compile Include="LeagueRADSProject.cs" />
+    <Compile Include="LeagueRADSProjectRelease.cs" />
     <Compile Include="LeagueManager.cs" />
+    <Compile Include="LeagueRawInstallation.cs" />
+    <Compile Include="ModifiedFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReleaseManifest\ReleaseManifestFile.cs" />
     <Compile Include="ReleaseManifest\ReleaseManifestFileEntry.cs" />
